spent hours pointlessly messing around with the style of some button cards

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Changa+One"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=arvo"
+		/>
 
 		<!--
       manifest.json provides metadata used when your web app is installed on a
